# fs25-profile-switcher

./: .gitignore  .markdownlint.json  CHANGELOG.md  LICENSE  README.md  config.example.yaml  pyproject.toml
docs/: gui-setup-windows.md  gui.md  windows-paths.md
fsmods_gui/: __init__.py  __main__.py  config.py  main.py  main_window.py  state.py  workers.py
fsmods_gui/profiles/: __init__.py  activator.py  catalog.py  profile.py  sync_back.py  translator.py
fsmods_gui/widgets/: __init__.py  library_table.py  mod_detail.py  profile_editor.py  sync_dialog.py
packaging/: build.ps1  fsmods_gui_entry.py
tests/: test_config.py  test_gui_state.py  test_main_qt_paths.py  test_profiles_activator.py  test_profiles_catalog.py  test_profiles_profile.py  test_profiles_sync_back.py
