[project]
name = "fs25-profile-switcher"
version = "0.1.1"
description = "Desktop GUI to manage per-save mod profiles for Farming Simulator 25 / 22"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Julien Chouteau" }]
keywords = ["farming-simulator", "fs25", "fs22", "mods", "profile-manager", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "PySide6>=6.7",
    "psutil>=5.9",
    "pyyaml>=6.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.7"]
build = ["nuitka>=2.4"]

[project.gui-scripts]
fsmods-gui = "fsmods_gui.main:run"

[project.urls]
Homepage = "https://github.com/Chouteau49/fs25-profile-switcher"
Source = "https://github.com/Chouteau49/fs25-profile-switcher"
Issues = "https://github.com/Chouteau49/fs25-profile-switcher/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fsmods_gui*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
